examples/test/testpolicy14130.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14130
  namespace: namespace2
spec:
  podSelector:
    matchLabels:
      key32: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value38
      podSelector:
        matchLabels:
          key23: value33
          key30: value46
          key1: value42
